[tool.poetry]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.11.0,<3.12"
openai = "^1.28.2"
flask = "^3.1.0"
newsapi = "^0.1.1"
newsapi-python = "^0.2.7"
python-telegram-bot = "^20.7"
telegram = "^0.0.1"
linkedin-api = "^2.3.1"
requests = "^2.32.3"

[tool.poetry.dev-dependencies]
debugpy = "^1.6.2"
replit-python-lsp-server = {extras = ["yapf", "rope", "pyflakes"], version = "^1.5.9"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"